--- a/generated-flask-server/requirements.txt
+++ b/generated-flask-server/requirements.txt
@@ -11,3 +11,5 @@ swagger-ui-bundle >= 0.0.2
 python_dateutil >= 2.6.0
 setuptools >= 21.0.0
 Flask == 2.1.1
+prometheus-client >= 0.21.0
+psutil >= 6.1.0
