feat(Logging)/logging_implementation
Implements logs using files with promtail + Grafana Loki.

Logs are saved to a docker volume shared wiith a promtail server in
another container. Promtail pushes logs to the Loki server instance.
After that Grafana provides dashboards over those logs in Loki.

--- a/generated-flask-server/prometheus.yml
+++ b/generated-flask-server/prometheus.yml
@@ -1,7 +1,10 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
 
 scrape_configs:
   - job_name: 'python-server'
     static_configs:
       - targets: ['python-server:8080']
+  - job_name: 'loki'
+    static_configs:
+      - targets: ['loki:3100']
