--- a/generated-flask-server/docker-compose.yml
+++ b/generated-flask-server/docker-compose.yml
@@ -5,28 +5,67 @@ services:
     build: .
     volumes:
       - .:/usr/src/app
+      - my_app_logs:/var/log/my_app
     ports:
-      - "8080:8080"
+      - "${PYTHON_SERVER_PORT}:8080"
     depends_on:
       - prometheus
+      - promtail
+      - loki
+    networks:
+      - monitoring
 
   prometheus:
     image: prom/prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-      - "9090:9090"
+      - "${PROMETHEUS_PORT}:9090"
+    depends_on:
+      - promtail
+    networks:
+      - monitoring
+
+  loki:
+    image: grafana/loki
+    ports:
+      - "${LOKI_PORT}:3100"
+    volumes:
+      - ./loki-config.yml:/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml
+    depends_on:
+      - promtail
+    networks:
+      - monitoring
+
+  promtail:
+    image: grafana/promtail
+    ports:
+      - "${PROMTAIL_PORT}:9080"
+    volumes:
+      - ./promtail-config.yml:/etc/promtail/config.yml
+      - my_app_logs:/var/log/my_app
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - monitoring
 
   grafana:
     image: grafana/grafana
     ports:
-      - "3001:3000"
+      - "${GRAFANA_PORT}:3000"
     depends_on:
       - prometheus
     volumes:
       - grafana-storage:/var/lib/grafana
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    networks:
+      - monitoring
+
+networks:
+  monitoring:
+    driver: bridge
 
 volumes:
+  my_app_logs:
   grafana-storage:
