feat(tempo, db)/tempo-implementation
Introduces PostgreSQL database to showcase abilities of Grafana Tempo
tracing

Introduces Grafana Tempo

--- a/generated-flask-server/.env
+++ b/generated-flask-server/.env
@@ -3,3 +3,5 @@ PROMETHEUS_PORT=9090
 PROMTAIL_PORT=9080
 GRAFANA_PORT=3001
 LOKI_PORT=3100
+
+DATABASE_URL=postgresql://user:password@postgres:5432/articles_db
