--- a/generated-flask-server/requirements.txt
+++ b/generated-flask-server/requirements.txt
@@ -13,3 +13,16 @@ setuptools >= 21.0.0
 Flask == 2.1.1
 prometheus-client >= 0.21.0
 psutil >= 6.1.0
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-logging
+opentelemetry-instrumentation-requests
+SQLAlchemy == 1.4.1
+psycopg2-binary
+Flask-Cors
+Flask-Migrate
+Flask-Script
+Flask-SQLAlchemy == 2.5.1
+watchdog
