--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run Docker container
         run: |
-          docker-compose up --build -d
+          docker compose up --build -d
 
       - name: Check running containers
         run: docker ps
