--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build Docker image for tests
         run: |
-          docker compose -f docker-compose.test.yml up --build -d 
+          docker compose -f ../../generated-flask-server/docker-compose.test.yml up --build -d 
           docker compose exec -T python-server pytest --maxfail=1 --disable-warnings -q
 
       - name: Run tests in Docker container
