--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -24,5 +24,6 @@ jobs:
 
       - name: Build and push Docker image
         run: |
+          cd generated-flask-server
           docker build -t ${{ secrets.DOCKER_USERNAME }}/flask:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/flask:latest
