--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run Docker container
         run: |
           cd generated-flask-server
-          docker compose up -f docker-compose.yml --build -d
+          docker compose -f docker-compose.yml up --build -d
 
       - name: Check running containers
         run: docker ps
