--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Log memory usage before starting 
+        run: free -m
+
       - name: Build Docker image for tests
         run: |
           cd generated-flask-server
           docker compose -f docker-compose.test.yml up --build -d 
           docker compose exec -T python-server pytest --maxfail=1 --disable-warnings -q
+
+      - name: Log memory usage after starting 
+        run: free -m
 
       - name: Run tests in Docker container
         run: docker run my-flask-app-test
