--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Clean up existing migrations directory 
+        run: | 
+          cd generated-flask-server 
+          if [ -d "migrations" ]; then rm -rf migrations; fi
+
       - name: Log memory usage before starting 
         run: free -m
 
